# agent-newsletter-summariser-tts

./: .gitignore  README.md  agent_test.py  digest_2026-05-13_23-37.md  digest_2026-05-14_23-38.md  email_tool.py  example_json_response_format.json  main.py  manual_email_test.py  newsletter_system_prompt.md  orchestrator.py  pyproject.toml  summarise.py  tts.py
.claude/: CLAUDE.md
digests/: digest_2026-05-11_18-11.md  digest_2026-05-11_19-10.md  digest_2026-05-13_23-30.md  digest_2026-05-13_23-34.md  digest_2026-05-13_23-46.md
